# stm32-usb-audio-interface

./: Cargo.toml  memory.x
src/: consts.rs  global.rs  init.rs  lib.rs  main.rs
