[package]
name = "audio_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f401", "usb_fs"] }
usb-device = "0.3.2"
usbd-audio = "0.4.0"

[patch.crates-io]
synopsys-usb-otg = { git = "https://github.com/kiffie/synopsys-usb-otg.git", branch = "iso-ep" }
